updated linking to point to main entry point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCES
 
 add_executable(Mandelbrot ${SOURCES})
 
-target_link_libraries(Mandelbrot PRIVATE SDL2::SDL2)
+target_link_libraries(Mandelbrot PRIVATE SDL2::SDL2main SDL2::SDL2)
 
 # add include directory explicitly so <SDL2/SDL.h> works everywhere
 target_include_directories(Mandelbrot PRIVATE ${SDL2_INCLUDE_DIRS})
