--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,17 @@ name: Build Mandelbrot
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - "v*"
   pull_request:
     branches: [ "main" ]
 
+permissions: 
+  contents: write
+
 jobs:
   build:
+    if: startsWith(github.ref, 'refs/tags/')
     # Run on Windows, Linux, AND macOS
     strategy:
       matrix:
@@ -60,3 +66,34 @@ jobs:
       with:
         name: Mandelbrot-macOS
         path: build/Mandelbrot
+  
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+
+      - name: Package macOS + Linux
+        run: |
+          ls -R dist
+          chmod +x dist/Mandelbrot-Linux/Mandelbrot || true
+          chmod +x dist/Mandelbrot-macOS/Mandelbrot || true
+
+          tar -czf Mandelbrot-Linux.tar.gz -C dist/Mandelbrot-Linux Mandelbrot
+          tar -czf Mandelbrot-macOS.tar.gz -C dist/Mandelbrot-macOS Mandelbrot
+
+          cp dist/Mandelbrot-Windows/Mandelbrot-Windows.zip .
+
+      - name: Publish GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          fail_on_unmatched_files: true
+          files: |
+            Mandelbrot-Windows.zip
+            Mandelbrot-Linux.tar.gz
+            Mandelbrot-macOS.tar.gz
