--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: Build Mandelbrot
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to build"
+        required: true
+        type: string
   push:
     branches: [ "main" ]
     tags:
@@ -11,18 +17,23 @@ on:
 permissions: 
   contents: write
 
+
+
 jobs:
   build:
-    if: startsWith(github.ref, 'refs/tags/')
-    # Run on Windows, Linux, AND macOS
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     strategy:
+      # Run on Windows, Linux, AND macOS
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-    
+
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        ref: ${{ github.event_name == 'workflow_dispatch' && format('refs/tags/{0}', inputs.tag) || github.ref }}
 
     # ensure SDL is setup on all platforms
     - name: Setup SDL
@@ -68,7 +79,7 @@ jobs:
         path: build/Mandelbrot
   
   release:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     needs: build
     runs-on: ubuntu-latest
 
@@ -93,6 +104,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           fail_on_unmatched_files: true
+          tag_name: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref_name }}
           files: |
             Mandelbrot-Windows.zip
             Mandelbrot-Linux.tar.gz
