--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,11 @@ set(CMAKE_C_STANDARD_REQUIRED True)
 
 find_package(SDL2 REQUIRED)
 
-set(SOURCES
-    main.c
-    mandelbrot.c
-    inputHandler.c
+add_executable(Mandelbrot
+    src/main.c
+    src/mandelbrot.c
+    src/inputHandler.c
 )
-
-add_executable(Mandelbrot ${SOURCES})
 
 target_link_libraries(Mandelbrot PRIVATE SDL2::SDL2main SDL2::SDL2)
 
@@ -21,7 +19,10 @@ if(UNIX AND NOT APPLE)
 endif()
 
 # add include directory explicitly so <SDL2/SDL.h> works everywhere
-target_include_directories(Mandelbrot PRIVATE ${SDL2_INCLUDE_DIRS})
+target_include_directories(Mandelbrot PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${SDL2_INCLUDE_DIRS}
+)
 
 # copy the SDL2.dll to the executable folder on windows
 if(WIN32)
