Updated gh actions to build correctly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
         mkdir Mandelbrot-Windows-x64
         cp build/Release/Mandelbrot.exe Mandelbrot-Windows-x64/
         cp build/Release/SDL3.dll Mandelbrot-Windows-x64/
+        cp build/Release/pthreadVC2.dll Mandelbrot-Windows-x64/
         7z a Mandelbrot-Windows.zip Mandelbrot-Windows-x64/
         
     - name: Upload Windows Artifact
