--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,23 +86,24 @@ jobs:
       shell: bash
       run: |
         echo "Searching for SDL3Config.cmake under sdl_install..."
-        find "${{ github.workspace }}/sdl_install" -name "SDL3Config.cmake" -o -name "sdl3-config.cmake" -print
+        find "${{ github.workspace }}/sdl_install" \( -name "SDL3Config.cmake" -o -name "sdl3-config.cmake" \) -print
         echo "Tree (top levels):"
         ls -la "${{ github.workspace }}/sdl_install" || true
         ls -la "${{ github.workspace }}/sdl_install/lib" || true
-        ls -la "${{ github.workspace }}/sdl_install/lib/cmake" || true
+        ls -la "${{ github.workspace }}/sdl_install/cmake" || true
 
-
+       
     # Build Mandelbrot
+    # if Windows, point CMake to the local SDL install
     - name: Configure Mandelbrot
       shell: bash
       run: |
-        # if Windows, point CMake to the local SDL install
-        if [ "$RUNNER_OS" == "Windows" ]; then
-            -B build -DCMAKE_BUILD_TYPE=Release -DSDL3_DIR="${{ github.workspace }}/sdl_install/lib/cmake/SDL3"
+        if [ "$RUNNER_OS" = "Windows" ]; then
+          cmake -B build -DCMAKE_BUILD_TYPE=Release -DSDL3_DIR="${{ github.workspace }}/sdl_install/cmake/SDL3"
         else
-           cmake -B build -DCMAKE_BUILD_TYPE=Release
+          cmake -B build -DCMAKE_BUILD_TYPE=Release
         fi
+
 
     - name: Build Mandelbrot
       run: cmake --build build --config Release
@@ -110,16 +111,6 @@ jobs:
 
     # Packaging
     # windows requires both the dll and exe. I zip them together here.
-    - name: Create Windows Release Package
-      if: matrix.os == 'windows-latest'
-      shell: bash
-      run: |
-        mkdir Mandelbrot-Windows-x64
-        cp build/Release/Mandelbrot.exe Mandelbrot-Windows-x64/
-        cp build/Release/SDL3.dll Mandelbrot-Windows-x64/
-        cp build/Release/pthreadVC2.dll Mandelbrot-Windows-x64/
-
-    # zip result
     - name: Create Windows Release Package
       if: matrix.os == 'windows-latest'
       shell: pwsh
